# GraphFuzz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
cli/: README.md  pyproject.toml
cli/gfuzz/: api.py  cli.py  docker_util.py  schema.py
cli/gfuzz/commands/: __init__.py  cliopt.py  minimizer.py  schema.py
cli/gfuzz/commands/doxygen/: extractor.py
cli/gfuzz/commands/doxygen/docker/: Dockerfile
cli/gfuzz/commands/doxygen/docker/in/: Doxyfile.template  run.py
core/: build_tests.sh  graph.hpp  graph.proto  graphTest.cpp  harness.cpp  ignorelist.txt  json.hpp  schema.hpp  schemaTest.cpp
docs/: README.md  _sidebar.md  index.html  schema_format.md
docs/experiments/: overview.md
docs/quick_start/: basic_usage.md  endpoints.md  installation.md
experiments/: README.md  build  run
experiments/base/: Dockerfile
experiments/custom_endpoints/: Dockerfile
experiments/custom_endpoints/in/: build.sh  schema.yaml
experiments/eigen/: Dockerfile
experiments/eigen/in/: build.sh  test.sh
experiments/ex_array_demo/: Dockerfile
experiments/ex_array_demo/in/: build_lib.sh
experiments/ex_auto_cpp/: Dockerfile  README.md  make_schema.sh
experiments/ex_auto_cpp/in/: auto_schema.yaml  build.sh  build_lib.sh
experiments/hello_graphfuzz/in/: lib.h  schema_verbose.yaml
experiments/iowow/: Dockerfile
experiments/iowow/in/: bug.sh  (+3 more)
experiments/rdkit/: Dockerfile  build_rdkit.sh
experiments/rdkit_demo/: Dockerfile
experiments/skia/: Dockerfile  README.md
experiments/sorting/: Dockerfile  make_schema.sh
experiments/sqlite3/: Dockerfile
(+156 files in other folders)
